# unidirs

./: Cargo.toml  LICENSE  README.md  deny.toml
.config/: lingo.dic  spellcheck.toml
.github/workflows/: ci.yml
src/: lib.rs  local.rs  service.rs  simple.rs  unified.rs  user.rs
